up quick fix on UI

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" class="row card-section">
           <div class="col-sm">
             <div class="card card-design text-center">
-              <h3 class="mt-4 certificate-card-header"><strong>Responsive Design</strong></h3>
+              <h3 class="mt-4 certificate-card-header"><strong>Responsive <br>Design</strong></h3>
               <div class="card-body">
                 <p class="card-text custom-card-text"> A web development approach that creates dynamic changes to the appearance of a website,
                   depending on the screen size and orientation of the device being used to view it (e.g Smartphones, Laptop, Computers).</p>
@@ -115,7 +115,7 @@
           </div>
           <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2500" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"class="col-sm">
             <div class="card card-design text-center">
-              <h3 class="mt-4 certificate-card-header"><strong>Data Structures</strong></h3>
+              <h3 class="mt-4 certificate-card-header"><strong>Data <br>Structures</strong></h3>
               <div class="card-body">
                 <p class="card-text custom-card-text">A programming approach that tackles programming fundamentals and
                   also the ways or programming styles. Example are Object Oriented Programming and Functional Programming.
