--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
             class="certificatetext text-center">Certificates</h2>
 
-        <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="2000"
-              data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" class="row card-section">
-          <div class="col-sm">
+        <div class="row card-section">
+          <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="2000"
+          data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+          class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
               <h3 class="mt-4 certificate-card-header"><strong>Responsive <br>Design</strong></h3>
               <div class="card-body">
@@ -113,7 +114,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2500" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"class="col-sm">
+          <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2500" data-aos-easing="ease-in-out"
+          data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
               <h3 class="mt-4 certificate-card-header"><strong>Data <br>Structures</strong></h3>
               <div class="card-body">
@@ -126,7 +128,8 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" class="col-sm">
+          <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
+          data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
               <h3 class="mt-4 certificate-card-header"><strong>Frontend <br>Libraries</strong></h3>
               <div class="card-body">
@@ -145,9 +148,10 @@
       <div class="container mt-0" id="services">
         <h2 data-aos="fade-right" data-aos-duration="600" data-aos-easing="ease-in-out"
             data-aos-mirror="true" data-aos-once="false" class="servicetext text-center">What I offer ?</h1>
-            <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000"
-                 data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" class="row card-section">
-              <div class="col-sm">
+            <div class="row card-section">
+              <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000"
+              data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
+              class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
                   <h3 class="mt-4 certificate-card-header"><strong>UI / UX <br>Design</strong></h3>
                   <div class="card-body">
@@ -157,7 +161,8 @@
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2000" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"class="col-sm">
+              <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2000" data-aos-easing="ease-in-out"
+              data-aos-mirror="true" data-aos-once="false"class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
                   <h3 class="mt-4 certificate-card-header"><strong>Frontend <br>Development</strong></h3>
                   <div class="card-body">
@@ -167,7 +172,8 @@
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false" class="col-sm">
+              <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
+              data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
                   <h3 class="mt-4 certificate-card-header"><strong>Backend <br>Development</strong></h3>
                   <div class="card-body">
@@ -220,8 +226,8 @@
        <div class="container" id="tools">
         <h2 data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-mirror="true"
             data-aos-once="false" class="tooltext text-center">Software tools I use</h1>
-            <div class="row">
-              <div class="col-sm">
+            <div class="row card-section">
+              <div class="col-xs col-sm col-md col-lg>
                 <div data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000" data-aos-easing="ease-in-out"
                      data-aos-mirror="true" data-aos-once="false" class="card card-design">
                   <div class="card-body">
@@ -240,7 +246,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm">
+              <div class="col-xs col-sm col-md col-lg>
                 <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2000" data-aos-easing="ease-in-out"
                      data-aos-mirror="true" data-aos-once="false" class="card card-design">
                   <div class="card-body">
@@ -260,7 +266,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm">
+              <div class="col-xs col-sm col-md col-lg>
                 <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
                      data-aos-mirror="true" data-aos-once="false" class="card card-design">
                   <div class="card-body">
