--- a/index.html
+++ b/index.html
@@ -22,41 +22,6 @@
       </head>
     <body>
 
-      <!-- Navbar -->
-      <!-- <nav class="navbar navbar-style navbar-expand-lg navbar-light bg-transparent">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" 
-                  data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li data-aos="fade-left" data-aos-delay="250" data-aos-duration="800"
-                  data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                  class="nav-item">
-                <a class="nav-link custom-nav-hover" href="#about">About</a>
-              </li>
-              <li data-aos="fade-left" data-aos-delay="500" data-aos-duration="800"
-                  data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                  class="nav-item">
-                <a class="nav-link custom-nav-hover" href="#services">Services</a>
-              </li>
-              <li  data-aos="fade-left" data-aos-delay="750" data-aos-duration="800"
-                  data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                  class="nav-item">
-                <a class="nav-link custom-nav-hover" href="#skills">Skills</a>
-              </li>
-              <li   data-aos="fade-left" data-aos-delay="1000" data-aos-duration="800"
-                    data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-                    class="nav-item">
-                <a class="nav-link custom-nav-hover" href="#tools">Tools</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav> -->
-
     <button onclick="topFunction()" id="TopButton" title="Go to top"><i class="fa fa-arrow-up"></i></button>
     
     <div class="main"> 
@@ -64,22 +29,20 @@
       <div class="responsive-landing-design">
         <div class="flex-item-left">
           <!-- Introduction Name -->
-          <h1 data-aos="fade-up" data-aos-delay="1500" data-aos-duration="1000"
+          <h1 data-aos="fade-up" data-aos-delay="300" data-aos-duration="500"
           data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-          class="introtext" id="myTitle">Daryl John Tadeo <br>
-                                Web Developer, Programmer<br>
-                                and Freelancer</h1><br>
-          <button data-aos="fade-right" data-aos-delay="2200" data-aos-duration="500"
+          class="introtext" id="myTitle"><span class="myName">Daryl John Tadeo</span><br>Web Developer, Programmer<br> and Freelancer</h1><br>
+          <button data-aos="fade-up" data-aos-delay="1300" data-aos-duration="500"
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
             class="root-button resume-button"><span><i class="fa fa-download download-icon" aria-hidden="true"></i> Resume</span>
           </button>
         </div>
         <div class="flex-item-right">
           <!-- My Image -->
-          <div data-aos="fade-up" data-aos-delay="3000" data-aos-duration="800"
+          <div data-aos="fade-up" data-aos-delay="800" data-aos-duration="500"
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
             class="d-flex justify-content-center">
-            <img src="dev.svg" alt="Avatar" class="my-image img-responsive">
+            <img src="dev.svg" alt="Avatar" id="illustration" class="my-image img-responsive">
           </div>
         </div>
 
@@ -89,18 +52,18 @@
       <div class="container" id="about">
         <h2 data-aos="fade-down" data-aos-duration="500" data-aos-easing="ease-in-out"
             data-aos-mirror="true" data-aos-once="false" class="abouttext text-center">Hi, Nice meeting you.</h2>
-        <h4 data-aos="fade-down" data-aos-duration="500" data-aos-delay="1000"
+        <h4 data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
             class="subabout-text text-center">I’m an upcoming 4th-year BSIT Student. I expertise in Web Development both in Front and Back End Development.
             I worked as a Web Developer at home already. However, I'm still looking to land progressive jobs as a Developer to gain experience and improved myself
             in the field. Most importantly is to help peoples and company who needs my service.</h4>
 
-        <h2 data-aos="fade-right" data-aos-duration="500" data-aos-delay="1500"
+        <h2 data-aos="fade-right" data-aos-duration="500" data-aos-delay="500"
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
             class="certificatetext text-center">Certificates</h2>
 
         <div class="row card-section">
-          <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="2000"
+          <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="500"
           data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
           class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
@@ -114,7 +77,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2500" data-aos-easing="ease-in-out"
+          <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="750" data-aos-easing="ease-in-out"
           data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
               <h3 class="mt-4 certificate-card-header"><strong>Data <br>Structures</strong></h3>
@@ -128,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
+          <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="1000" data-aos-easing="ease-in-out"
           data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
             <div class="card card-design text-center">
               <h3 class="mt-4 certificate-card-header"><strong>Frontend <br>Libraries</strong></h3>
@@ -146,10 +109,10 @@
 
       <!-- Services -->
       <div class="container mt-0" id="services">
-        <h2 data-aos="fade-right" data-aos-duration="600" data-aos-easing="ease-in-out"
+        <h2 data-aos="fade-right" data-aos-duration="500" data-aos-easing="ease-in-out"
             data-aos-mirror="true" data-aos-once="false" class="servicetext text-center">What I offer ?</h1>
             <div class="row card-section">
-              <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000"
+              <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="500"
               data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
               class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
@@ -161,7 +124,7 @@
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2000" data-aos-easing="ease-in-out"
+              <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="750" data-aos-easing="ease-in-out"
               data-aos-mirror="true" data-aos-once="false"class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
                   <h3 class="mt-4 certificate-card-header"><strong>Frontend <br>Development</strong></h3>
@@ -172,7 +135,7 @@
                   </div>
                 </div>
               </div>
-              <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
+              <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="1000" data-aos-easing="ease-in-out"
               data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
                 <div class="card card-design text-center">
                   <h3 class="mt-4 certificate-card-header"><strong>Backend <br>Development</strong></h3>
@@ -188,9 +151,9 @@
 
        <!-- Skills -->
        <div class="container skills-design" id="skills">
-        <h2 data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-mirror="true"
-            data-aos-once="false" class="skilltext text-center">My skillset</h1>
-            <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-mirror="true">
+        <h2 data-aos="fade-up" data-aos-duration="500" data-aos-easing="ease-in-out" data-aos-mirror="true"
+            data-aos-once="false" class="skilltext text-center">My skillset</h2>
+            <div data-aos="fade-up" data-aos-duration="500" data-aos-delay="500" data-aos-easing="ease-in-out" data-aos-mirror="true">
               <h3 class="skill-style">HTML CSS and JavaScript</h3>
               <div class="progress" style="height: 20px;">
                 <div class="progress-bar progress-bar-style" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
@@ -225,69 +188,71 @@
        <!-- Tools -->
        <div class="container" id="tools">
         <h2 data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-mirror="true"
-            data-aos-once="false" class="tooltext text-center">Software tools I use</h1>
+            data-aos-once="false" class="tooltext text-center">Software tools I use</h2>
             <div class="row card-section">
-              <div class="col-xs col-sm col-md col-lg>
-                <div data-aos="fade-right" data-aos-duration="800" data-aos-delay="1000" data-aos-easing="ease-in-out"
-                     data-aos-mirror="true" data-aos-once="false" class="card card-design">
-                  <div class="card-body">
-                    <img src="sketch.png" class="rounded mx-auto d-block" alt="..." width="30%">
+                <div data-aos="fade-right" data-aos-duration="800" data-aos-delay="500" data-aos-easing="ease-in-out"
+                     data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
+                  <div class="card card-design">
+                    <img src="sketch.png" class="rounded mx-auto d-block adjust-margin" alt="..." width="30%">
                     <h4 class="toolcardtext text-center">Designing</h4>
                     <p class="toolcardsubtext text-center">In designing I value the clients suggestions if there's one yet I also suggest much better designs if it doesn't seem to fit the subject or the thing I'm designing.</p>
-                    <p class="toolsmaintext text-center"><strong>Design Tools:</strong></p>
-                    <ul class="list-group list-group-flush toolcardlisttext text-center">
-                      <li class="list-group-item items-tools-style">Material UI</li>
-                      <li class="list-group-item items-tools-style">Rsuite</li>
-                      <li class="list-group-item items-tools-style">Bootstrap</li>
-                      <li class="list-group-item items-tools-style">Bulma</li>
-                      <li class="list-group-item items-tools-style">HTML and CSS</li>
-                      <li class="list-group-item items-tools-style">Other libraries if needed.</li>
-                    </ul>
+                    <div class="card-body">
+                      <p class="toolsmaintext text-center"><strong>Design Tools:</strong></p>
+                        <ul class="list-group list-group-flush toolcardlisttext text-center">
+                          <li class="list-group-item items-tools-style">Material UI</li>
+                          <li class="list-group-item items-tools-style">Rsuite</li>
+                          <li class="list-group-item items-tools-style">Bootstrap</li>
+                          <li class="list-group-item items-tools-style">Bulma</li>
+                          <li class="list-group-item items-tools-style">HTML and CSS</li>
+                          <li class="list-group-item items-tools-style">Other libraries if needed.</li>
+                        </ul>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-xs col-sm col-md col-lg>
-                <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="2000" data-aos-easing="ease-in-out"
-                     data-aos-mirror="true" data-aos-once="false" class="card card-design">
-                  <div class="card-body">
-                    <img src="code.png" class="rounded mx-auto d-block" alt="..." width="30%">
-                    <h4 class="toolcardtext text-center">Coding</h4>
-                    <p class="toolcardsubtext text-center">In coding I prefer the most efficient way possible and less lines
-                      of code In short I value the reusabilitiy of codes and keeping it in loop of Solid Programming Principles.</p>
-                    <p class="toolsmaintext text-center"><strong>Technlogies Used:</strong></p>
-                    <ul class="list-group list-group-flush  toolcardlisttext text-center">
-                      <li class="list-group-item items-tools-style">Rest API</li>
-                      <li class="list-group-item items-tools-style">JavaScript and TypeScript</li>
-                      <li class="list-group-item items-tools-style">React and Redux</li>
-                      <li class="list-group-item items-tools-style">MySQL, Mongoose, MongoDB</li>
-                      <li class="list-group-item items-tools-style">Angular and Ionic</li>
-                      <li class="list-group-item items-tools-style">Other technologies if needed.</li>
-                    </ul>
-                  </div>
+                <div data-aos="fade-up" data-aos-duration="800" data-aos-delay="750" data-aos-easing="ease-in-out"
+                     data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
+                     <div class="card card-design">
+                        <img src="code.png" class="rounded mx-auto d-block adjust-margin" alt="..." width="30%">
+                        <h4 class="toolcardtext text-center">Coding</h4>
+                        <p class="toolcardsubtext text-center">In coding I prefer the most efficient way possible and less lines
+                          of code In short I value the reusabilitiy of codes and keeping it in loop of Solid Programming Principles.</p>
+                        <div class="card-body">
+                          <p class="toolsmaintext text-center"><strong>Technlogies Used:</strong></p>
+                            <ul class="list-group list-group-flush  toolcardlisttext text-center">
+                              <li class="list-group-item items-tools-style">Rest API</li>
+                              <li class="list-group-item items-tools-style">JavaScript and TypeScript</li>
+                              <li class="list-group-item items-tools-style">React and Redux</li>
+                              <li class="list-group-item items-tools-style">MySQL, Mongoose, MongoDB</li>
+                              <li class="list-group-item items-tools-style">Angular and Ionic</li>
+                              <li class="list-group-item items-tools-style">Other technologies if needed.</li>
+                            </ul>
+                        </div>
+                      </div>
                 </div>
-              </div>
-              <div class="col-xs col-sm col-md col-lg>
-                <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="3000" data-aos-easing="ease-in-out"
-                     data-aos-mirror="true" data-aos-once="false" class="card card-design">
-                  <div class="card-body">
-                    <img src="tools.png" class="rounded mx-auto d-block" alt="..." width="30%">
-                    <h4 class="toolcardtext text-center">Tools</h4>
-                    <p class="toolcardsubtext text-center">Here I list the tools I am familiar with in developing and also with these tools I am able to develop applications and others. Yet I'm willing to learn other dev tools.</p>
-                    <p class="toolsmaintext text-center"><strong>Developing Tools:</strong></p>
-                    <ul class="list-group list-group-flush  toolcardlisttext text-center">
-                      <li class="list-group-item items-tools-style">Visual Studio Code</li>
-                      <li class="list-group-item items-tools-style">Github, Tortoise Git</li>
-                      <li class="list-group-item items-tools-style">Pen and Paper</li>
-                      <li class="list-group-item items-tools-style">Postman</li>
-                      <li class="list-group-item items-tools-style">Browser Web Tools</li>
-                      <li class="list-group-item items-tools-style">Others if needed.</li>
-                    </ul>
-                  </div>
+                <div data-aos="fade-left" data-aos-duration="800" data-aos-delay="1000" data-aos-easing="ease-in-out"
+                     data-aos-mirror="true" data-aos-once="false" class="col-xs col-sm col-md col-lg">
+                      <div class="card card-design">
+                        <img src="tools.png" class="rounded mx-auto d-block adjust-margin" alt="..." width="30%">
+                        <h4 class="toolcardtext text-center">Tools</h4>
+                        <p class="toolcardsubtext text-center">Here I list the tools I am familiar with in developing and also with these tools I am able to develop applications and others. Yet I'm willing to learn other dev tools.</p>
+                        <div class="card-body">
+                          <p class="toolsmaintext text-center"><strong>Developing Tools:</strong></p>
+                          <ul class="list-group list-group-flush  toolcardlisttext text-center">
+                            <li class="list-group-item items-tools-style">Visual Studio Code</li>
+                            <li class="list-group-item items-tools-style">Github, Tortoise Git</li>
+                            <li class="list-group-item items-tools-style">Pen and Paper</li>
+                            <li class="list-group-item items-tools-style">Postman</li>
+                            <li class="list-group-item items-tools-style">Browser Web Tools</li>
+                            <li class="list-group-item items-tools-style">Others if needed.</li>
+                          </ul>
+                        </div>
+                      </div> 
                 </div>
-              </div>
             </div>
        </div>
     </div>
+  </div>
+  
 
      <!-- Footer -->
      <div class="mt-5 pt-5 pb-5 footer">
