update social links

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               and collaborate in your future projects and businesses. </p>
             <p>
               <a href="https://www.facebook.com/daryljohn.tadeo/"><i class="fa fa-facebook-square"></i></a>
-              <a href="https://github.com/DarylTadss"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/DarylTadeo"><i class="fa fa-github"></i></a>
               <a href="https://www.linkedin.com/in/daryl-john-tadeo-b6630a12a/"><i class="fa fa-linkedin-square"></i></a>
               <a href="https://www.instagram.com/daryljohnsantos/"><i class="fa fa-instagram"></i></a>
               <a href="https://twitter.com/JOHnDArylTAdeo"><i class="fa fa-twitter"></i></a>
