--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <p class="toolcardsubtext text-center">In coding I prefer the most efficient way possible and less lines
                           of code In short I value the reusabilitiy of codes and keeping it in loop of Solid Programming Principles.</p>
                         <div class="card-body">
-                          <p class="toolsmaintext text-center"><strong>Technlogies Used:</strong></p>
+                          <p class="toolsmaintext text-center"><strong>Technologies Used:</strong></p>
                             <ul class="list-group list-group-flush  toolcardlisttext text-center">
                               <li class="list-group-item items-tools-style">Rest API</li>
                               <li class="list-group-item items-tools-style">JavaScript and TypeScript</li>
