update link in resume

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <h1 data-aos="fade-up" data-aos-delay="300" data-aos-duration="500"
           data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
           class="introtext" id="myTitle"><span class="myName">Daryl John Tadeo</span><br>Web Developer, Programmer<br> and Freelancer</h1><br>
-          <button data-aos="fade-up" data-aos-delay="1300" data-aos-duration="500"
+          <a href="https://drive.google.com/drive/folders/18V33vT2JX5LazbkK0-lqX3cp8RRj1p5M?usp=sharing" target="_blank" data-aos="fade-up" data-aos-delay="1300" data-aos-duration="500"
             data-aos-easing="ease-in-out" data-aos-mirror="true" data-aos-once="false"
-            class="root-button resume-button"><span><i class="fa fa-download download-icon" aria-hidden="true"></i> Resume</span>
-          </button>
+            class="root-button resume-button linked-button"><span><i class="fa fa-download download-icon" aria-hidden="true"></i> Resume</span>
+          </a>
         </div>
         <div class="flex-item-right">
           <!-- My Image -->
@@ -265,7 +265,7 @@
             <p>
               <a href="https://www.facebook.com/daryljohn.tadeo/"><i class="fa fa-facebook-square"></i></a>
               <a href="https://github.com/DarylTadeo"><i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/daryl-john-tadeo-b6630a12a/"><i class="fa fa-linkedin-square"></i></a>
+              <a href="www.linkedin.com/in/DarylTadeo"><i class="fa fa-linkedin-square"></i></a>
               <a href="https://www.instagram.com/daryljohnsantos/"><i class="fa fa-instagram"></i></a>
               <a href="https://twitter.com/JOHnDArylTAdeo"><i class="fa fa-twitter"></i></a>
             </p>
